--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -6,15 +6,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 8px;
+  padding-top: 12px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 8px;
+  }
 }
 
 .header__logo {
-  margin-right: 292px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 269px;
+  }
 }
 
 .header__list {
-  display: flex;
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .header__item:not(:last-child) {
@@ -29,32 +43,72 @@
   line-height: calc(20 / 16);
   display: flex;
   align-items: center;
-  color: #fcfcfc;
+  color: var(--primery-text-color);
   &:hover,
   &:focus {
     color: #f8d24e;
   }
+
+  transition-property: color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__burger-menu {
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+
+  @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+    margin-right: 32px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
 }
 
 .header__btn {
-  margin-left: auto;
-  padding: 0;
-  width: 152px;
-  height: 42px;
-  background-color: #f8d24e;
-  border-radius: 10px;
-  border: none;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: calc(17 / 14);
-  color: #131313;
+  display: none;
 
-  &:hover {
-    background-color: #0a8817;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    width: 152px;
+    height: 42px;
+    background-color: #f8d24e;
+    border-radius: 10px;
+    border: none;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: calc(17 / 14);
+    color: #131313;
+
+    &:hover {
+      background-color: #0a8817;
+    }
+
+    &:focus {
+      background-color: #0a8817;
+      color: #fcfcfc;
+    }
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 1200px) {
+      margin-left: auto;
+    }
   }
 
-  &:focus {
-    background-color: #0a8817;
-    color: #fcfcfc;
+  &:focus .header__btn-icon {
+    fill: #fcfcfc;
   }
+}
+
+.header__btn-icon {
+  margin-left: 7px;
 }
