моб центрование, адрес в Бруклине

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <section class="section-contacts">
-  <div class="container">
+  <div class="container contacts">
     <h2 class="visually-hidden">Our contacts</h2>
 
     <ul class="list contacts__list">
@@ -75,10 +75,10 @@
           <li class="contacts__city">
             <p class="">New York</p>
           </li>
-          <li class="contacts__address">
-            <a class="link" href=""
-              >777726 Sterling Pl, Brooklyn, NY  1112222,  USA  </a
-            >
+          <li class="contacts__address address-short">
+            <a class="link " href=""
+              >726 Sterling Pl, Brooklyn, NY 11222, USA
+            </a>
           </li>
           <li class="contacts-timetable">
             <p class="contacts-timetable__day">Monday - Friday</p>
@@ -104,16 +104,20 @@
       <button
         type="button"
         data-modal="locations"
-        class="btn_location open-modal js-open-modal"
+        class="btn btn_big open-modal js-open-modal"
       >
-        Our Locations
+        Our Locations<svg class="btn_arrow" width="12" height="12">
+          <use href="/src/images/svg/icons.svg#btn-arrow"></use>
+        </svg>
       </button>
       <button
         type="button"
         data-modal="franchise"
-        class="btn_franchise open-modal js-open-modal"
+        class="btn_transparent open-modal js-open-modal"
       >
-        Franchise
+        Franchise<svg class="btn_arrow" width="12" height="12">
+          <use href="/src/images/svg/icons.svg#btn-arrow"></use>
+        </svg>
       </button>
     </div>
   </div>
