--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -1,15 +1,17 @@
 .section-contacts {
   background-color: #84a178;
-  position: relative;
+  // position: relative;
 }
 
-// .contacts__list {
+// .contacts {
 //     position: absolute;
-//     bottom: 345px;
+//     bottom: 34px;
 // }
 
 .contacts__item {
   padding: 40px 32px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #fcfcfc;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
@@ -185,62 +187,80 @@
   }
 }
 
-.btn_location {
-  display: block;
-  width: 196px;
-  height: 42px;
-  border-radius: 10px;
-  cursor: pointer;
-  padding: 0;
-  background-color: #f8d24e;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.29;
-  color: #131313;
-  border: none;
-
-  &:hover {
-    background-color: #0a8817;
-  }
-
-  &:focus {
-    background-color: #0a8817;
-    color: #fcfcfc;
-  }
-
-  &:disabled {
-    background-color: #ababab;
-  }
-
-  @media screen and (max-width: 767px) {
-    margin-bottom: 16px;
+@media screen and (max-width: 767px) {
+  .btn {
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
-.btn_franchise {
-  display: block;
-  width: 196px;
-  height: 42px;
-  border-radius: 10px;
-  cursor: pointer;
-  padding: 0;
-  color: #131313;
-  background-color: #84a178;
-  border: 2px solid #f8d24e;
-
-  &:hover {
-    border: 2px solid #0a8817;
-  }
-
-  &:focus {
-    border: 2px solid #0a8817;
-    color: #fcfcfc;
-  }
-
-  &:disabled {
-    border: 2px solid #ababab;
+@media screen and (max-width: 767px) {
+  .btn_transparent {
+    margin-right: auto;
+    margin-left: auto;
   }
 }
+
+.address-short {
+  width: 150px;
+}
+
+// .btn_location {
+//   display: block;
+//   width: 196px;
+//   height: 42px;
+//   border-radius: 10px;
+//   cursor: pointer;
+//   padding: 0;
+//   background-color: #f8d24e;
+//   font-weight: 600;
+//   font-size: 14px;
+//   line-height: 1.29;
+//   color: #131313;
+//   border: none;
+
+//   &:hover {
+//     background-color: #0a8817;
+//   }
+
+//   &:focus {
+//     background-color: #0a8817;
+//     color: #fcfcfc;
+//   }
+
+//   &:disabled {
+//     background-color: #ababab;
+//   }
+
+//   @media screen and (max-width: 767px) {
+//     margin-bottom: 16px;
+//   }
+// }
+
+// .btn_franchise {
+//   display: block;
+//   width: 196px;
+//   height: 42px;
+//   border-radius: 10px;
+//   cursor: pointer;
+//   padding: 0;
+//   color: #131313;
+//   background-color: #84a178;
+//   border: 2px solid #f8d24e;
+
+//   &:hover {
+//     border: 2px solid #0a8817;
+//   }
+
+//   &:focus {
+//     border: 2px solid #0a8817;
+//     color: #fcfcfc;
+//   }
+
+//   &:disabled {
+//     border: 2px solid #ababab;
+//   }
+// }
 
 @media screen and (min-width: 768px) {
   .contacts_buttons {
@@ -250,5 +270,11 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .btn_big {
+    margin-bottom: 16px;
   }
 }
