add animation for buttons
и небольшие мелкие исправления

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
-<section class="container products">
-  <div class="products__content">
+<section class="products">
+  <div class="container products__content">
     <strong class="products__label-title">100% natural</strong>
     <h2 class="products__title">Products</h2>
     <ul class="list products__list">
