--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -1,15 +1,11 @@
 .products {
+  @include section;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  padding-top: 60px;
-  padding-bottom: 60px;
 
   background-color: #ffffff;
 
-  &__content {
-    max-width: $desktop;
-  }
   @media screen and (max-width: 480px) {
     max-width: 480px;
     background-size: contain;
@@ -40,7 +36,7 @@
   @media screen and (min-width: 769px) {
     display: flex;
     justify-content: center;
-    max-width: 1600px;
+    max-width: 1200px;
     background-image: url('../images/bg/bg.sec.2_@1x.png');
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -53,7 +49,6 @@
     margin-bottom: 12px;
 
     font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 22px;
@@ -77,7 +72,6 @@
     margin-bottom: 148px;
 
     font-family: 'Seymour One';
-    font-style: normal;
     font-weight: 400;
     font-size: 30px;
     line-height: 38px;
@@ -290,7 +284,10 @@
 
   @media screen and (max-width: 767px) {
     max-width: 480px;
-    margin-bottom: 164px;
+
+    &:not(:last-child) {
+      margin-bottom: 164px;
+    }
   }
 
   @media screen and (min-width: $tablet) {
@@ -311,7 +308,6 @@
     margin-bottom: 40px;
 
     font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
@@ -335,7 +331,6 @@
     margin-bottom: 110px;
 
     font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 176%;
@@ -370,10 +365,10 @@
   @media screen and (min-width: $desktop) {
     display: flex;
     flex-wrap: wrap;
-    gap: 32px;
+    gap: 29px;
 
     & .product {
-      flex-basis: calc((100% - 64px) / 3);
+      flex-basis: calc((100% - 58px) / 3);
 
       @media screen and (min-width: $desktop) {
         max-width: 370px;
@@ -391,6 +386,7 @@
     &--hover,
     &--focus {
       opacity: 0;
+      transition: opacity var(--main-animation);
     }
   }
 
@@ -399,6 +395,7 @@
     .arrow--default,
     .arrow--focus {
       opacity: 0;
+      transition: opacity var(--main-animation);
     }
   }
 
@@ -408,6 +405,7 @@
     }
     .arrow--focus {
       opacity: 0;
+      transition: opacity var(--main-animation);
     }
   }
 
@@ -417,6 +415,7 @@
     }
     .arrow--hover {
       opacity: 0;
+      transition: opacity var(--main-animation);
     }
   }
 
