Поменял значения line-height на calc

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -6,6 +6,7 @@
 
   background-color: #ffffff;
 
+// Mobile
   @media screen and (max-width: 480px) {
     max-width: 480px;
     background-size: contain;
@@ -20,6 +21,7 @@
     }
   }
 
+  // Tablet
   @media screen and (min-width: 481px) {
     max-width: $tablet;
     background-size: cover;
@@ -33,6 +35,7 @@
     }
   }
 
+  // Desctop
   @media screen and (min-width: 769px) {
     display: flex;
     justify-content: center;
@@ -45,54 +48,58 @@
     }
   }
 
+  // Лейбл заголовка
   &__label-title {
     margin-bottom: 12px;
 
     font-family: 'Montserrat';
     font-weight: 800;
     font-size: 18px;
-    line-height: 22px;
+    line-height: calc(22px / 18px);
     text-transform: uppercase;
 
     color: #131313;
 
     @media screen and (min-width: $tablet) {
       font-size: 22px;
-      line-height: 27px;
+      line-height: calc(27px / 22px);
     }
 
     @media screen and (min-width: $desktop) {
       font-size: 30px;
-      line-height: 37px;
+      line-height: calc(37px / 30px);
       letter-spacing: 0.04em;
     }
   }
 
+  // Заголовок секції
   &__title {
     margin-bottom: 148px;
 
     font-family: 'Seymour One';
     font-weight: 400;
     font-size: 30px;
-    line-height: 38px;
+    line-height: calc(38px / 30px);
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
     color: #131313;
 
+    // Tablet
     @media screen and (min-width: $tablet) {
       margin-bottom: 140px;
 
       font-size: 34px;
-      line-height: 43px;
+      line-height: calc(43px / 34px);
     }
 
+    // Desctop
     @media screen and (min-width: $desktop) {
       margin-bottom: 230px;
 
       font-size: 36px;
-      line-height: 45px;
+      line-height: calc(45px / 36px);
       letter-spacing: 0.06em;
     }
   }
@@ -100,6 +107,7 @@
     display: inline-block;
   }
 }
+// Контейнер для картинок карток
 .picture-container {
   display: inline-block;
   max-width: 200px;
@@ -107,9 +115,11 @@
   transform: translateY(-50%);
   border-radius: 50%;
 
+  // Tablet
   @media screen and (min-width: $tablet) {
     margin-bottom: -70px;
   }
+  // Desctop
   @media screen and (min-width: $desktop) {
     width: 300px;
     height: 300px;
@@ -129,6 +139,7 @@
       #d9d9d9;
     box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
 
+    // Картинки карток
     &::before {
       content: '';
       display: block;
@@ -304,13 +315,14 @@
     min-height: 535px;
   }
 
+// Заголовок картки
   &__title {
     margin-bottom: 40px;
 
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 20px;
-    line-height: 24px;
+    line-height: calc(24px / 20px);
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
@@ -318,13 +330,13 @@
 
     @media screen and (min-width: $tablet) {
       font-size: 22px;
-      line-height: 27px;
+      line-height: calc(27px / 22px);
     }
     @media screen and (min-width: $desktop) {
       margin-bottom: 65px;
 
       font-size: 30px;
-      line-height: 37px;
+      line-height: calc(37px / 30px);
     }
   }
   &__text {
@@ -333,7 +345,7 @@
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 14px;
-    line-height: 176%;
+    line-height: calc(25px / 14px);
     /* or 25px */
     letter-spacing: 0.04em;
 
