desktop version - about
added desktop styles for about section. however, i have a question about positioning the text which is on the right. it is supposed to be closer to the center, but i cannot figure out how to do it.
-Anastasia Demianenko

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,9 +7,9 @@
     <div class="about__inline">
       <div class="about__shape">
         <picture>
-          <source media="(min-width: 1200px)" srcset="./images/about/cow.mobile_@1x.png 1x, ./images/about/cow.mobile_@2x.png 2x">
+          <source media="(max-width: 767px)" srcset="./images/about/cow.mobile_@1x.png 1x, ./images/about/cow.mobile_@2x.png 2x">
           <source media="(min-width: 768px)" srcset="./images/about/cow.tablet_@1x.png 1x, ./images/about/cow.tablet_@2x.png 2x">
-          <source media="(max-width: 767px)" srcset="./images/about/cow.desc_@1x.png 1x, ./images/about/cow.desc_@2x.png 2x">
+          <source media="(min-width: 1200px)" srcset="./images/about/cow.desc_@1x.png 1x, ./images/about/cow.desc_@2x.png 2x">
           <img src="./images/about/cow.desc_@1x.png" alt="picture of a cow" class="about__image">
         </picture>
       </div>
