--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,9 @@
 <footer class="footer">
     <div class="footer__container container">
-        <ul class="footer-banner">
-            <li>
+        <div class="footer-banner">
         <p class="footer-banner__paragraph">homemade ice cream made</p>
-        <h2 class="footer-banner__header">with passion</h2>
-            </li>
-        </ul>
+        <p class="footer-banner__header">with passion</p>
+           </div>
         <div class="socials">
           <ul class="socials__list list">
             <li class="socials__item">
