--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -1,235 +1,300 @@
-    <!-- /**
+<!-- /**
       |============================
       | Buy Now Modal Window
       |============================
     */ -->
 
-    <div class="buy-now_modal modal js-modal" data-modal="buy-now">
-      <button type="button" class="modal-close js-modal-close">
-        <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/icons.svg#close-icon"></use>
-        </svg>
-      </button>
-      <h3 class="buy-now_title modal_title">Buy now</h3>
+<div class="buy-now_modal modal js-modal" data-modal="buy-now">
+  <button type="button" class="modal-close js-modal-close">
+    <svg class="icon-close-modal" width="11" height="11">
+      <use href="./images/svg/icons.svg#close-icon"></use>
+    </svg>
+  </button>
+  <h3 class="buy-now_title modal_title">Buy now</h3>
 
-      <div class="buy-now_checkbox-container">
-        <label class="buy-now_checkbox-label">
-          <input class="checkbox" type="checkbox" name="icecream" value="ice-cream" />
-          <div class="buy-now_thumb icecream_thumb">
-            <div class="image_underlay icecream_underlay"></div>
-            <p class="thumb-title">Ice Cream</p>
-          </div>
-        </label>
-
-        <label class="buy-now_checkbox-label">
-          <input class="checkbox" type="checkbox" name="icecream" value="ice-coffee" />
-          <div class="buy-now_thumb icecoffee_thumb">
-            <div class="image_underlay icecoffee_underlay"></div>
-            <p class="thumb-title">Ice Coffee</p>
-          </div>
-        </label>
-
-        <label class="buy-now_checkbox-label">
-          <input class="checkbox" type="checkbox" name="icecream" value="milkshake" />
-          <div class="buy-now_thumb milkshake_thumb">
-            <div class="image_underlay milkshake_underlay"></div>
-            <p class="thumb-title">Milkshake</p>
-          </div>
-        </label>
+  <div class="buy-now_checkbox-container">
+    <label class="buy-now_checkbox-label">
+      <input
+        class="checkbox"
+        type="checkbox"
+        name="icecream"
+        value="ice-cream"
+      />
+      <div class="buy-now_thumb icecream_thumb">
+        <div class="image_underlay icecream_underlay"></div>
+        <p class="thumb-title">Ice Cream</p>
       </div>
+    </label>
 
-      <form name="buy-now" class="form buy-now_form">
-        <label class="form_label">
-          <input class="input" type="text" name="name" autocomplete="on" placeholder="Name" />
-        </label>
+    <label class="buy-now_checkbox-label">
+      <input
+        class="checkbox"
+        type="checkbox"
+        name="icecream"
+        value="ice-coffee"
+      />
+      <div class="buy-now_thumb icecoffee_thumb">
+        <div class="image_underlay icecoffee_underlay"></div>
+        <p class="thumb-title">Ice Coffee</p>
+      </div>
+    </label>
 
-        <label class="form_label">
-          <input class="input" type="tel" name="tel" autocomplete="on" placeholder="Phone" />
-        </label>
+    <label class="buy-now_checkbox-label">
+      <input
+        class="checkbox"
+        type="checkbox"
+        name="icecream"
+        value="milkshake"
+      />
+      <div class="buy-now_thumb milkshake_thumb">
+        <div class="image_underlay milkshake_underlay"></div>
+        <p class="thumb-title">Milkshake</p>
+      </div>
+    </label>
+  </div>
 
-        <label class="form_label">
-          <textarea
-            class="input textarea"
-            name="comment"
-            id="comment"
-            rows="3"
-            placeholder="Comment"
-          ></textarea>
-        </label>
-        <button class="modal-submit_button" type="submit">Submit</button>
-      </form>
-    </div>
+  <form name="buy-now" class="form buy-now_form">
+    <label class="form_label">
+      <input
+        class="input"
+        type="text"
+        name="name"
+        autocomplete="on"
+        placeholder="Name"
+      />
+    </label>
 
-    <!-- /**
+    <label class="form_label">
+      <input
+        class="input"
+        type="tel"
+        name="tel"
+        autocomplete="on"
+        placeholder="Phone"
+      />
+    </label>
+
+    <label class="form_label">
+      <textarea
+        class="input textarea"
+        name="comment"
+        id="comment"
+        rows="3"
+        placeholder="Comment"
+      ></textarea>
+    </label>
+    <button class="modal-submit_button" type="submit">Submit</button>
+  </form>
+</div>
+
+<!-- /**
   |============================
   | Buy Now Modal Window (with Ingredients)
   |============================
 */ -->
 
-    <div class="buy-now-ingredients_modal modal js-modal" data-modal="buy-now_ingredients">
-      <button type="button" class="modal-close js-modal-close">
-        <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/icons.svg#close-icon"></use>
-        </svg>
-      </button>
-      <h3 class="modal_title buy-now-ingredients_title">Chocolate icecream</h3>
-      <div class="buy-now-ingredients_image-underlay"></div>
-      <ul class="buy-now-ingredients_list">
-        <li class="buy-now-ingredients_item">
-          <div class="nutrients_underlay">320</div>
-          <p class="nutrients">ckal</p>
-        </li>
-        <li class="buy-now-ingredients_item">
-          <div class="nutrients_underlay">4g</div>
-          <p class="nutrients">Proteins</p>
-        </li>
-        <li class="buy-now-ingredients_item">
-          <div class="nutrients_underlay">8,2g</div>
-          <p class="nutrients">Fats</p>
-        </li>
-        <li class="buy-now-ingredients_item">
-          <div class="nutrients_underlay">40,4g</div>
-          <p class="nutrients">Carbs</p>
-        </li>
-      </ul>
-      <p class="ingredients_small-title">Ingredients</p>
+<div
+  class="buy-now-ingredients_modal modal js-modal"
+  data-modal="buy-now_ingredients"
+>
+  <button type="button" class="modal-close js-modal-close">
+    <svg class="icon-close-modal" width="11" height="11">
+      <use href="./images/svg/icons.svg#close-icon"></use>
+    </svg>
+  </button>
+  <h3 class="modal_title buy-now-ingredients_title">Chocolate icecream</h3>
+  <div class="buy-now-ingredients_image-underlay"></div>
+  <ul class="buy-now-ingredients_list">
+    <li class="buy-now-ingredients_item">
+      <div class="nutrients_underlay">320</div>
+      <p class="nutrients">ckal</p>
+    </li>
+    <li class="buy-now-ingredients_item">
+      <div class="nutrients_underlay">4g</div>
+      <p class="nutrients">Proteins</p>
+    </li>
+    <li class="buy-now-ingredients_item">
+      <div class="nutrients_underlay">8,2g</div>
+      <p class="nutrients">Fats</p>
+    </li>
+    <li class="buy-now-ingredients_item">
+      <div class="nutrients_underlay">40,4g</div>
+      <p class="nutrients">Carbs</p>
+    </li>
+  </ul>
+  <p class="ingredients_small-title">Ingredients</p>
 
-      <ul class="ingredients_list">
-        <li class="ingredients_item"><span>Milk</span><span>100ml</span></li>
-        <li class="ingredients_item"><span>Belgian chocolate</span><span>20g</span></li>
-        <li class="ingredients_item"><span>Cream</span><span>150 ml</span></li>
-        <li class="ingredients_item"><span>Cocoa powder</span><span>30g</span></li>
-        <li class="ingredients_item"><span>Sugar</span><span>40g</span></li>
-        <li class="ingredients_item"><span>Vanilla sugar</span><span>10g</span></li>
-      </ul>
+  <ul class="ingredients_list">
+    <li class="ingredients_item"><span>Milk</span><span>100ml</span></li>
+    <li class="ingredients_item">
+      <span>Belgian chocolate</span><span>20g</span>
+    </li>
+    <li class="ingredients_item"><span>Cream</span><span>150 ml</span></li>
+    <li class="ingredients_item"><span>Cocoa powder</span><span>30g</span></li>
+    <li class="ingredients_item"><span>Sugar</span><span>40g</span></li>
+    <li class="ingredients_item"><span>Vanilla sugar</span><span>10g</span></li>
+  </ul>
 
-      <form name="buy-now" class="form buy-now_form">
-        <label class="form_label">
-          <input class="input" type="text" name="name" autocomplete="on" placeholder="Name" />
-        </label>
+  <form name="buy-now" class="form buy-now_form">
+    <label class="form_label">
+      <input
+        class="input"
+        type="text"
+        name="name"
+        autocomplete="on"
+        placeholder="Name"
+      />
+    </label>
 
-        <label class="form_label">
-          <input class="input" type="tel" name="tel" autocomplete="on" placeholder="Phone" />
-        </label>
+    <label class="form_label">
+      <input
+        class="input"
+        type="tel"
+        name="tel"
+        autocomplete="on"
+        placeholder="Phone"
+      />
+    </label>
 
-        <label class="form_label">
-          <textarea
-            class="input textarea"
-            name="comment"
-            id="comment"
-            rows="3"
-            placeholder="Comment"
-          ></textarea>
-        </label>
-        <button class="modal-submit_button" type="submit">Submit</button>
-      </form>
-    </div>
+    <label class="form_label">
+      <textarea
+        class="input textarea"
+        name="comment"
+        id="comment"
+        rows="3"
+        placeholder="Comment"
+      ></textarea>
+    </label>
+    <button class="modal-submit_button" type="submit">Submit</button>
+  </form>
+</div>
 
-    <!-- /**
+<!-- /**
   |============================
   | How It`s Made Modal Window
   |============================
 */ -->
 
-    <div class="how-its-made_modal modal js-modal" data-modal="how-made">
-      <button type="button" class="modal-close js-modal-close">
-        <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/icons.svg#close-icon"></use>
-        </svg>
-      </button>
-      <h3 class="modal_title how-its-made_title">How it’s made?</h3>
-      <iframe
-        class="how-its-made_video"
-        width="224"
-        height="200"
-        src="https://www.youtube.com/embed/zagD0LQdsDE"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
-      <div class="how-its-made_text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore et Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et
-      </div>
-    </div>
+<div class="how-its-made_modal modal js-modal" data-modal="how-made">
+  <button type="button" class="modal-close js-modal-close">
+    <svg class="icon-close-modal" width="11" height="11">
+      <use href="./images/svg/icons.svg#close-icon"></use>
+    </svg>
+  </button>
+  <h3 class="modal_title how-its-made_title">How it’s made?</h3>
+  <iframe
+    class="how-its-made_video"
+    width="224"
+    height="200"
+    src="https://www.youtube.com/embed/zagD0LQdsDE"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+  ></iframe>
+  <div class="how-its-made_text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+    adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+  </div>
+</div>
 
-    <!-- /**
+<!-- /**
   |============================
   | Locations Modal Window
   |============================
 */ -->
 
-    <div class="location_modal modal js-modal" data-modal="locations">
-      <button type="button" class="modal-close js-modal-close">
-        <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/icons.svg#close-icon"></use>
-        </svg>
-      </button>
-      <h3 class="modal_title location-title">Our Locations</h3>
-      <img
+<div class="location_modal modal js-modal" data-modal="locations">
+  <button type="button" class="modal-close js-modal-close">
+    <svg class="icon-close-modal" width="11" height="11">
+      <use href="./images/svg/icons.svg#close-icon"></use>
+    </svg>
+  </button>
+  <h3 class="modal_title location-title">Our Locations</h3>
+  <!-- <img
         class="location-image"
         src="images/modal/map.mobile_@1x.jpg"
         alt="Map"
         width="224px"
         height="199px"
-      />
-      <a class="open-map_link" href="https://goo.gl/maps/gjFAeG6t4nSM62w7A">Open Map</a>
-    </div>
+      /> -->
+  <a class="open-map_link" href="https://goo.gl/maps/gjFAeG6t4nSM62w7A"
+    >Open Map</a
+  >
+</div>
 
-    <!-- /**
+<!-- /**
   |============================
   | Franchise Modal Window
   |============================
 */ -->
 
-    <div class="franchise_modal modal js-modal" data-modal="franchise">
-      <button type="button" class="modal-close js-modal-close">
-        <svg class="icon-close-modal" width="11" height="11">
-          <use href="./images/svg/icons.svg#close-icon"></use>
-        </svg>
-      </button>
-      <h3 class="modal_title franchise_title">
-        Thank you for your interest in owning an Ice Cream shop
-      </h3>
-      <div class="franchise_text">
-        Due to the overwhelming volume of franchise requests we are not accepting new franchisee
-        applications at this time. Once the application process resumes, we will contact you for
-        further information. Please fill out the contact information below and we will reach out for
-        additional information. We appreciate your patience.
-      </div>
+<div class="franchise_modal modal js-modal" data-modal="franchise">
+  <button type="button" class="modal-close js-modal-close">
+    <svg class="icon-close-modal" width="11" height="11">
+      <use href="./images/svg/icons.svg#close-icon"></use>
+    </svg>
+  </button>
+  <h3 class="modal_title franchise_title">
+    Thank you for your interest in owning an Ice Cream shop
+  </h3>
+  <div class="franchise_text">
+    Due to the overwhelming volume of franchise requests we are not accepting
+    new franchisee applications at this time. Once the application process
+    resumes, we will contact you for further information. Please fill out the
+    contact information below and we will reach out for additional information.
+    We appreciate your patience.
+  </div>
 
-            <form name="buy-now" class="form buy-now_form">
-        <label class="form_label">
-          <input class="input" type="text" name="name" autocomplete="on" placeholder="Name" />
-        </label>
+  <form name="buy-now" class="form buy-now_form">
+    <label class="form_label">
+      <input
+        class="input"
+        type="text"
+        name="name"
+        autocomplete="on"
+        placeholder="Name"
+      />
+    </label>
 
-        <label class="form_label">
-          <input class="input" type="tel" name="tel" autocomplete="on" placeholder="Phone" />
-        </label>
+    <label class="form_label">
+      <input
+        class="input"
+        type="tel"
+        name="tel"
+        autocomplete="on"
+        placeholder="Phone"
+      />
+    </label>
 
-                <label>
-          <input class="input" type="email" name="email" autocomplete="on" placeholder="E-mail" />
-        </label>
+    <label>
+      <input
+        class="input"
+        type="email"
+        name="email"
+        autocomplete="on"
+        placeholder="E-mail"
+      />
+    </label>
 
-        <label class="form_label">
-          <textarea
-            class="input textarea"
-            name="comment"
-            id="comment"
-            rows="3"
-            placeholder="Comment"
-          ></textarea>
-        </label>
-        <button class="modal-submit_button" type="submit">Submit</button>
-      </form>
-    </div>
+    <label class="form_label">
+      <textarea
+        class="input textarea"
+        name="comment"
+        id="comment"
+        rows="3"
+        placeholder="Comment"
+      ></textarea>
+    </label>
+    <button class="modal-submit_button" type="submit">Submit</button>
+  </form>
+</div>
 
-    <!-- /**
+<!-- /**
   |============================
   | Overlay
   |============================
 */ -->
 
-    <div class="overlay js-overlay-modal"></div>
+<div class="overlay js-overlay-modal"></div>
