--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,15 +1,15 @@
 :root {
-  --primery-text-color: #FCFCFC;
-  --primery-disabled-color: #ABABAB;
-  --primery-br-disabled-color: #ABABAB;
-  --primery-accent-color: #F8D24E;
-  --primery-bg-color: #F8D24E;
-  --primery-border-color: #F8D24E;
+  --primery-text-color: #fcfcfc;
+  --primery-disabled-color: #ababab;
+  --primery-br-disabled-color: #ababab;
+  --primery-accent-color: #f8d24e;
+  --primery-bg-color: #f8d24e;
+  --primery-border-color: #f8d24e;
   --primery-title-color: #131313;
   --primery-hover-color: #0a8817;
   --primery-br-hover-color: #0a8817;
 
-  --primery-title-font: font-family: 'Seymour One';
+  --primery-title-font: 'Seymour One';
   --main-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
