--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,78 +1,44 @@
 <section class="hero">
   <div class="hero__container">
-    <div class="thumb-numb">
-      <span class="thumb-numb__numbers">16</span>
-      <p class="thumb-numb__text-cafes">cafes</p>
-      <span class="thumb-numb__numbers">23</span>
-      <p class="thumb-numb__text">food trucks</p>
+    <div class="thumb">
+      <span class="thumb__numbers">16</span>
+      <p class="thumb__text">cafes</p>
+      <span class="thumb__numbers">23</span>
+      <p class="thumb__text">food trucks</p>
     </div>
     <div class="hero__wrap">
       <h1 class="hero__title">
-        ice cream made width
-        <span class="hero__title-passion"> passion </span>
+        ice cream made width passion </span>
       </h1>
-      <span></span>
     </div>
     <div class="wrap-hero-buttons">
-      <a href="./products.html" class="product-button">Products</a>
-      <a href="./about.html" class="made-button">How it`s made?</a>
+      <button type="button" href="./index.html" class="product-button">Products</a>
+      <button type="button" href="./index.html" class="made-button">How it`s made?</a>
     </div>
-    <div class="wrap-text">
-      <p class="hero__text">
-        Lorem ipsum dolor sit amet,
-        <br />
-        consectetur adipiscing elit,
-        <br />
-        incididunt ut labore et
+    <div class="ice-cream__description">
+      <picture>
+        <img width="225px" height="225px"
+          class="ice-cream"
+          src="/src/images/header/ice-cream.header.desc_@2x.png"
+        />
+      </picture>
+      <div>
+        <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, incididunt ut labore et
       </p>
       <button type="button" class="hero-favicon">
         <svg class="hero-favicon__arrow">
-          <use></use>
+          <use ></use>
         </svg>
       </button>
     </div>
-    <picture>
-      <source srcset="" />
-      <img class="mobille-ellipse" />
-    </picture>
-    <picture>
-      <source srcset="" />
-      <img class="mobille-ice-cream" />
-    </picture>
-    <div>
-      <picture>
-        <source srcset="" />
-        <img class="tablet-milk" />
-      </picture>
-      <picture>
-        <source srcset="" />
-        <img class="tablet-ice-cream" />
-      </picture>
-      <picture>
-        <source srcset="" />
-        <img class="tablet-girl" />
-      </picture>
-      <picture>
-        <source srcset="" />
-        <img class="tablet-ellipse" />
-      </picture>
     </div>
     <div>
       <picture>
-        <source srcset="" />
-        <img class="desktop-milk" />
-      </picture>
-      <picture>
-        <source srcset="" />
-        <img class="desktop-ice-cream" />
-      </picture>
-      <picture>
-        <source srcset="" />
-        <img class="desktop-girl" />
-      </picture>
-      <picture>
-        <source srcset="" />
-        <img class="desctop-ellipse" />
+        <img 
+          class="ice-cream__main"
+          src="/src/images/header/rojok.header.desc_@1x.png"
+        />
       </picture>
     </div>
   </div>
